--- a/angular.json
+++ b/angular.json
@@ -4,6 +4,12 @@
   "newProjectRoot": "projects",
   "projects": {
     "skeleton-auth-angular": {
+      "i18n": {
+        "sourceLocale": "en-US",
+        "locales": {
+            "es-AR": "src/locale/messages.es.xlf"
+        }
+      },
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,6 +23,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "localize": [
+                "es-AR"
+            ],
             "outputPath": "dist/skeleton-auth-angular",
             "index": "src/index.html",
             "main": "src/main.ts",
