--- a/angular.json
+++ b/angular.json
@@ -40,6 +40,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
+              "@federico1818/skeleton-themes-css/dist/css/app.css",
               "src/styles.scss"
             ],
             "scripts": []
